# CodeWMBench

./: .env.example  .gitignore  ARTIFACTS.md  Makefile  README.md  pyproject.toml  requirements-remote.txt
artifacts/: SHA256SUMS.template.txt  raw_results_manifest.template.json
codewmbench/: __init__.py  benchmarks.py  config.py  crafted_benchmarks.py  language_support.py  leaderboards.py  logger.py  models.py  providers.py  public_benchmarks.py  report.py  scorecard.py  suite.py  utils.py  validation.py
configs/: crafted_original_only.yaml  crafted_stress_only.yaml  crafted_translation_only.yaml  debug.yaml  default.yaml  humanevalx_only.yaml  mbxp_only.yaml  public_humaneval_plus_ewd_runtime.yaml  public_humaneval_plus_kgw_runtime.yaml  public_humaneval_plus_stone_runtime.yaml  public_humaneval_plus_sweet_runtime.yaml  public_mbpp_plus_ewd_runtime.yaml  public_mbpp_plus_kgw_runtime.yaml  public_mbpp_plus_stone_runtime.yaml  public_mbpp_plus_sweet_runtime.yaml
docs/: artifacts.md  baselines.md  datasets.md  local_model_matrix.md  metrics.md  remote_linux_gpu.md  reproduce.md  submission.md
results/: README.md  schema.json
scripts/: _hf_readiness.py  _shared.py  analyze_results.py  audit_benchmarks.py  audit_full_matrix.py  build_suite_manifests.py  certify_suite_precheck.py  check_model_access.py  clean_suite_outputs.py  evaluate_baseline_family.py  export_dataset_statistics.py  export_full_run_tables.py  fetch_public_benchmarks.py  fetch_runtime_upstreams.sh  install_tools.sh  monitor_matrix.py  package_zenodo.sh  prepare_data.py  refresh_public_snapshots.py  (+9 more)
(+201 files in other folders)
